[package]
name = "mockrs"
version = "0.1.0"
authors = ["PrivateRookie <996514515@qq.com>"]
edition = "2018"
description = "a mock restful json http server"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0.0-alpha.6"
actix-rt = "1.0.0"
dotenv = "0.15.0"
jen = "1.0.1"
pretty_env_logger = "0.3.1"
log = "0.4.8"
serde = {version="1.0.104", features=["derive"]}
serde_json = "1.0.44"
structopt = "0.3.5"
